--- a/Pages/MUSICA.html
+++ b/Pages/MUSICA.html
@@ -66,6 +66,6 @@
         </ol>
 
     </footer>
-    
+    <!--esta vez le agrego otro comentario y tiene que tomarlo en cuenta git-->
 </body>
 </html>
