--- a/Pages/NOSOTROS.html
+++ b/Pages/NOSOTROS.html
@@ -78,6 +78,6 @@
         </ol>
 
     </footer>
-    
+    <!--esta vez le agrego otro comentario y tiene que tomarlo en cuenta git-->
 </body>
 </html>
