--- a/Pages/iglesia.html
+++ b/Pages/iglesia.html
@@ -67,6 +67,6 @@
         </ol>
 
     </footer>
-    
+    <!--esta vez le agrego otro comentario y tiene que tomarlo en cuenta git-->
 </body>
 </html>
